--- a/src/daisoi/theme/theme/style.css
+++ b/src/daisoi/theme/theme/style.css
@@ -596,9 +596,16 @@ body.template-plone_root_view #main-content { padding-top: 0; padding-bottom: 0;
 .header-style-2 #main-nav > ul > li > a,
 .header-style-2 #site-header .header-search-icon { line-height: 101px; }
 
+.header-style-2 #main-nav > ul > li > a { color: #fff; }
+.header-style-2 .is-down #main-nav > ul > li > a { color: #000; }
+.header-style-2 #main-nav > ul > li.current-menu-item > a ,
+.header-style-2 #main-nav > ul > li > a:hover { color: #ec6c00; }
+
+/* remove bottom line
 .header-style-2 #main-nav > ul > li > a:after { content: ""; position: absolute; bottom: 0; left: 0; width: 0%; height: 3px; background-color: #ec6c00; opacity: 0; visibility: hidden;  -webkit-transition: all 0.3s ease; -moz-transition: all 0.3s ease; -ms-transition: all 0.3s ease; -o-transition: all 0.3s ease; transition: all 0.3s ease; }
 .header-style-2 #main-nav > ul > li.current-menu-item > a:after ,
 .header-style-2 #main-nav > ul > li > a:hover:after { opacity: 1; visibility: visible; width: 100%; }
+*/
 
 /* Style 3 */
 .header-style-3 #site-header { background-color: rgba(0,0,0,0.2); box-shadow: none; }
@@ -1124,4 +1131,11 @@ body.template-plone_root_view #main-content { padding-top: 0; padding-bottom: 0;
 
   .comment-list.style-2 article .gravatar { margin: 0px; }
 
+}
+
+.item-title{
+  color: #ec6c00;
+}
+.item-content{
+  color: #fff;
 }
