--- a/src/daisoi/theme/theme/assets/css/shortcodes.css
+++ b/src/daisoi/theme/theme/assets/css/shortcodes.css
@@ -144,14 +144,16 @@
 
 /* Icon left */
 .themesflat-icon-box.icon-left { position: relative; }
-.themesflat-icon-box.icon-left .icon-wrap { position: absolute; top: 0; left: 0; }
+.themesflat-icon-box.icon-left .icon-wrap { top: 0; left: 0; float: left; max-height: 55px; max-width: 55px;}
 .themesflat-icon-box.icon-left .text-wrap { padding-left: 80px; }
 
 /* Style 1 */
 .themesflat-icon-box.style-1 .heading { font-size: 18px; line-height: 28px; margin: 26px 0px 13px 0px; }
 .themesflat-icon-box.style-1 .sub-heading { color: #666; line-height: 26px; margin-top: 19px; }
 
+/*
 .themesflat-icon-box.style-1.light-bg .icon-wrap:before { content: ""; width: 100%; height: 100%; border-radius: 50%; background-color: #ec6c00; position: absolute; top: 0; left: 0; z-index: -1; transform: scale(0.7); -webkit-transition: all 0.3s ease; -moz-transition: all 0.3s ease; -ms-transition: all 0.3s ease; -o-transition: all 0.3s ease; transition: all 0.3s ease; opacity: 0; visibility: hidden; }
+*/
 
 .themesflat-icon-box.style-1.light-bg:hover .icon-wrap:before { transform: scale(1);  opacity: 1; visibility: visible;}
 
@@ -353,7 +355,7 @@
 .themesflat-project .elm-meta > span { display: inline-block; position: relative; }
 
 .themesflat-project.has-margin.mg15 { margin-left: -15px; 	margin-right: -15px;}
-.themesflat-project.has-margin.mg15 .project-item { padding-left: 15px;padding-right: 15px;width: 33.33%; float: left; margin-bottom: 30px; }
+.themesflat-project.has-margin.mg15 .project-item { padding-left: 15px;padding-right: 15px;width: 33.33%; floa: left; margin-bottom: 30px; }
 .themesflat-project.has-margin.mg15.w25 .project-item { width: 25%; }
 
 /* Style 1 */
