--- a/src/daisoi/theme/theme/assets/css/shortcodes.css
+++ b/src/daisoi/theme/theme/assets/css/shortcodes.css
@@ -30,14 +30,14 @@
 
 /* Button
 -------------------------------------------------------------- */
-.themesflat-button { display: inline-block; font-size: 14px;  font-weight: 600; color: #fff; background-color: transparent; padding: 14px 40px;  font-family: 'Montserrat', sans-serif; letter-spacing: 0.5px;  position: relative; z-index: 1; overflow: hidden; }
+.themesflat-button { display: inline-block; font-size: 14px;  font-weight: 600; color: #fff !important; background-color: transparent; padding: 14px 40px;  font-family: 'Montserrat', sans-serif; letter-spacing: 0.5px;  position: relative; z-index: 1; overflow: hidden; }
 .themesflat-button.font-default { font-family: 'Open Sans', sans-serif; font-size: 14px; font-weight: 400; padding: 13px 25px; letter-spacing: 0px; }
-.themesflat-button.bg-accent { background-color: #ec6c00; }
-.themesflat-button.bg-white { background-color: #ec6c00; color: #fff; }
+.themesflat-button.bg-accent { background-color: #ec6c00  !important; }
+.themesflat-button.bg-white { background-color: #ec6c00  !important; color: #fff; }
 .themesflat-button.bg-light-white { background-color: #f2f2f2; color: #555; }
 .themesflat-button.bg-white.color-333 { background-color: #fff; color: #333; }
 .themesflat-button.big { padding: 15px 36px; }
-.themesflat-button.small { color: #444; padding: 14px 26px; }
+.themesflat-button.small { color: #444 !important; padding: 14px 26px; }
 .themesflat-button.pd30 { padding: 11px 30px; }
 
 .themesflat-button:before { content: ""; position: absolute; width: 100%; height: 0%; z-index: -1; top: 50%; left: 50%; opacity: 0; visibility: hidden; -webkit-transition: all 0.3s ease; -moz-transition: all 0.3s ease; -ms-transition: all 0.3s ease; -o-transition: all 0.3s ease; transition: all 0.3s ease; -webkit-transform: translate(-50%,-50%); -moz-transform: translate(-50%,-50%) ; -ms-transform: translate(-50%,-50%); -o-transform: translate(-50%,-50%); transform: translate(-50%,-50%); }
@@ -50,7 +50,7 @@
 
 .themesflat-button.bg-light-white:hover,
 .themesflat-button.bg-white:hover,
-.themesflat-button.bg-accent:hover { color: #fff; }
+.themesflat-button.bg-accent:hover { color: #fff !important; }
 
 /* Button custom */
 .button-wrap.has-icon .themesflat-button > span { position: relative; display: block; }
@@ -120,7 +120,7 @@
 .themesflat-icon-box.circle .icon-wrap { border-radius: 50%; }
 
 /* Background */
-.themesflat-icon-box.light-bg .icon-wrap { background-color: #f5f5f5;  position: relative; z-index: 1; }
+.themesflat-icon-box.light-bg .icon-wrap { position: relative; z-index: 1; }
 
 /* Color */
 .themesflat-icon-box.accent-color .icon-wrap { color: #ec6c00; }
@@ -204,7 +204,8 @@
 }
 
 @media only screen and (max-width: 767px) {
-	.half-background.style-1 { height: 330px; }
+	.half-background.style-1 { height: 100%; }
+        .themesflat-headings.style-1 .heading { font-size: 26px; }
 	.half-background.style-2 { margin-top: 35px; }
 }
 /* List
