--- a/src/daisoi/theme/theme/style.css
+++ b/src/daisoi/theme/theme/style.css
@@ -393,14 +393,16 @@ body.template-plone_root_view #main-content { padding-top: 0; padding-bottom: 0;
 .themesflat-row .span_1_of_3 { width: 25%; float: left; }
 .themesflat-row .span_1_of_6 { width: 50%; float: left; }
 .themesflat-row .span_1_of_12 { width: 100%; }
-.themesflat-row .span_5_of_1 { width: 7%; float:left; }
+.themesflat-row .span_5_of_1 { width: 7em; float:left; }
+.themesflat-row .span_5_of_1.footer-ip{ width: 8em;}
 
 .themesflat-row.separator.drank > [class*="span_"]  { border-left: 1px solid #f2f2f2; }
 .themesflat-row.separator.drank > [class*="span_"]:first-child { border-left: 0px; }
 
 /* Effect
 -------------------------------------------------------------- */
-.data-effect .data-effect-item { position: relative; overflow: hidden; }
+.data-effect .data-effect-item { position: relative; overflow: hidden;}
+.data-effect .performance.data-effect-item { height: 240px;}
 .overlay-effect { position: absolute; top: 0; left: 0; width: 100%; height: 100%; opacity: 0; visibility: hidden; -webkit-transform: translate3d(0,50%,0) matrix(1, 0, -0.1, 1, 0, 0); -moz-transform: translate3d(0,50%,0) matrix(1, 0, -0.1, 1, 0, 0); -ms-transform: translate3d(0,50%,0) matrix(1, 0, -0.1, 1, 0, 0); -o-transform: translate3d(0,50%,0) matrix(1, 0, -0.1, 1, 0, 0); transform: translate3d(0,50%,0) matrix(1, 0, -0.1, 1, 0, 0); -webkit-transition: all 0.3s ease; -moz-transition: all 0.3s ease; -ms-transition: all 0.3s ease; -o-transition: all 0.3s ease; transition: all 0.3s ease; }
 .overlay-effect.bg-color-1 { background-color: rgba(0,0,0,0.2); }
 .overlay-effect.bg-color-2 { background-color: rgba(0,0,0,0.3); }
@@ -527,7 +529,7 @@ body.template-plone_root_view #main-content { padding-top: 0; padding-bottom: 0;
 #main-nav ul { margin: 0px; }
 #main-nav ul li { position: relative;  list-style: none;}
 #main-nav > ul > li { float: left; padding: 0px 17.5px; }
-#main-nav > ul > li > a { display: block; font-size: 14px; font-weight: 600; color: #222; position: relative; line-height: 100px;  font-family: 'Montserrat', sans-serif; }
+#main-nav > ul > li > a { display: block; font-size: 15px; font-weight: 600; color: #222; position: relative; line-height: 100px;  font-family: 'Montserrat', sans-serif; }
 
 /* Sub Menu */
 #main-nav .sub-menu { position: absolute; top: 100%; left: 0; width: 250px; padding: 15px 0px; background-color: #262626; z-index: 9999; opacity: 0; visibility: hidden; -webkit-transition: all 0.3s ease; -moz-transition: all 0.3s ease; -ms-transition: all 0.3s ease; -o-transition: all 0.3s ease; transition: all 0.3s ease; -webkit-transform: translateY(15px);-moz-transform: translateY(15px); -ms-transform: translateY(15px);
@@ -543,7 +545,7 @@ body.template-plone_root_view #main-content { padding-top: 0; padding-bottom: 0;
 #main-nav-mobi { display: block; margin: 0 auto; width: 100%; position: absolute; top: 100%; left: 0; z-index: 9999; background-color: #f6f6f6;  }
 #main-nav-mobi ul { display: block; list-style: none; margin: 0; padding: 0; }
 #main-nav-mobi ul li { margin: 0; text-align: center; cursor: pointer; padding: 0; border-top: 1px solid #ebebeb; position: relative; }
-#main-nav-mobi ul > li > a { color: #999; display: inline-block; font-size: 14px; text-transform: uppercase; line-height: 48px; font-weight: 600; }
+#main-nav-mobi ul > li > a { color: #999; display: inline-block; font-size: 15px; text-transform: uppercase; line-height: 48px; font-weight: 600; }
 #main-nav-mobi ul li:first-child { border-top: 0px; }
 #main-nav-mobi ul > li.current-menu-item > a,
 #main-nav-mobi ul > li > a:hover { color: #ec6c00; }
@@ -556,8 +558,8 @@ body.template-plone_root_view #main-content { padding-top: 0; padding-bottom: 0;
 /* Search icon */
 #site-header .header-search-icon { display: block; font-size: 14px; line-height: 100px; }
 #site-header .header-youtube-icon { display: block; font-size: 20px; line-height: 100px; }
-#header-search .header-youtube-icon .youtube-icon { border-radius: 50%; padding: 0.2em 0.2em; background: white; color: black; }
-#header-search.is-down .header-youtube-icon .youtube-icon { background: black; color: white; }
+#header-search .header-youtube-icon .youtube-icon { border-radius: 50%; padding: 0.2em 0.2em; background: white; color: red; }
+#header-search.is-down .header-youtube-icon .youtube-icon { background: white; color: red; }
 
 /* Search Form */
 #site-header .header-search-form { position: absolute; right: 0px; top: 100%;  width: 270px; opacity: 0; visibility: hidden; }
@@ -602,9 +604,10 @@ body.template-plone_root_view #main-content { padding-top: 0; padding-bottom: 0;
 .header-style-2 #site-header .header-youtube-icon { line-height: 101px; }
 
 .header-style-2 #main-nav > ul > li > a { color: #fff; }
-.header-style-2 .is-down #main-nav > ul > li > a { color: #000; }
+.header-style-2 #main-nav > ul > li:not(.current-menu-item) > a { text-shadow: 0px 0px 10px #000000f2; }
+.header-style-2 .is-down #main-nav > ul > li > a { color: #000; text-shadow: unset; }
 .header-style-2 #main-nav > ul > li.current-menu-item > a ,
-.header-style-2 #main-nav > ul > li > a:hover { color: #ec6c00; }
+.header-style-2 #main-nav > ul > li > a:hover { color: #ec6c00; text-shadow: unset; }
 
 /* remove bottom line
 .header-style-2 #main-nav > ul > li > a:after { content: ""; position: absolute; bottom: 0; left: 0; width: 0%; height: 3px; background-color: #ec6c00; opacity: 0; visibility: hidden;  -webkit-transition: all 0.3s ease; -moz-transition: all 0.3s ease; -ms-transition: all 0.3s ease; -o-transition: all 0.3s ease; transition: all 0.3s ease; }
@@ -895,8 +898,8 @@ body.template-plone_root_view #main-content { padding-top: 0; padding-bottom: 0;
 .themesflat-pagination .page-prev-next > li a:after { content: ""; position: absolute; width: 22px; height: 22px; border-radius: 50%; background-color: #e9e9e9; top: 0; z-index: -1;-webkit-transition: all 0.3s ease; -moz-transition: all 0.3s ease; -ms-transition: all 0.3s ease; -o-transition: all 0.3s ease; transition: all 0.3s ease;  }
 .themesflat-pagination .page-prev-next > li a.prev:after { left: 0; }
 .themesflat-pagination .page-prev-next > li a.next:after { right: 0; }
-.themesflat-pagination .page-prev-next > li a.prev { padding-left: 36px; }
-.themesflat-pagination .page-prev-next > li a.next { padding-right: 36px; }
+.themesflat-pagination .page-prev-next > li a.prev { }
+.themesflat-pagination .page-prev-next > li a.next { }
 
 .themesflat-pagination .page-prev-next > li a:hover { color: #ec6c00;  }
 .themesflat-pagination .page-prev-next > li a:hover:before { color: #fff; }
@@ -907,8 +910,8 @@ body.template-plone_root_view #main-content { padding-top: 0; padding-bottom: 0;
 #footer { background: url('assets/img/page/bg-footer.jpg') no-repeat center center; background-size: cover;  position: relative; z-index: 1; padding: 79px 0px 72px 0px; }
 
 #footer-widgets .widget .widget-title { color: #fff; font-size: 14px; margin-bottom: 24px; letter-spacing: 1.3px; margin-top: 2px; }
-#footer-widgets .widget .widget-title span { padding: 0px 0px 8px 0px; }
-#footer-widgets .widget .widget-title span:after { width: 40px; }
+#footer-widgets .widget .widget-title span { padding: 0px 0px 8px 0px; width: fit-content; display: table;}
+#footer-widgets .widget .widget-title span:after { width: 100%; }
 #footer-widgets .widget.widget_lastest ul li { border-top: 1px solid rgba(255,255,255,0.07); padding-top: 13px; margin-top: 19px; }
 #footer-widgets .widget.widget_lastest ul li:first-child { border-top: 0px; padding-top: 0px; }
 #footer-widgets .widget ul { margin: 0; list-style: none; }
@@ -1023,13 +1026,15 @@ body.template-plone_root_view #main-content { padding-top: 0; padding-bottom: 0;
   .themesflat-row.gutter-mobile .span_1_of_3 { width: 50%; }
 
   .divider.h35 { height: 35px; display: block; clear: both; }
+
+  .themesflat-row .span_5_of_1.footer-ip{ clear:both;}
 }
 
 @media only screen and (max-width: 991px) {
 	#site-header .mobile-button { display: block; }
+	.menu-has-search #site-header #header-search {display: block; right: 60px;}
 
 	#main-nav,
-	.menu-has-search #site-header #header-search ,
 	.menu-has-cart #site-header .nav-top-cart-wrapper,
 	#top-bar .top-bar-content,
 	.switcher-container,
@@ -1056,6 +1061,7 @@ body.template-plone_root_view #main-content { padding-top: 0; padding-bottom: 0;
   .themesflat-row .span_1_of_3 { width: 50%; }
   .themesflat-row .span_5_of_1 { width: 25%; float:left; }
   .themesflat-row .span_5_of_1:nth-child(4) { clear: both; }
+  .themesflat-row .span_5_of_1.footer-ip{ clear:unset;}
   /*
   .themesflat-row.gutter-30 > [class*="col"]:nth-child(3) { clear: both; }
   */
@@ -1098,7 +1104,7 @@ body.template-plone_root_view #main-content { padding-top: 0; padding-bottom: 0;
 	.themesflat-row .span_1_of_6,
   .themesflat-row.gutter-mobile .span_1_of_3 ,
 	.themesflat-row .span_1_of_4 { width: 100%; }
-        .themesflat-row .span_5_of_1 { width: 33.3%; float:left; }
+        .themesflat-row .span_5_of_1 { width: 33.3%; float:left; padding: 0 15px 0 15px;}
   .themesflat-row .span_5_of_1:nth-child(4) { clear: unset; }
 
 	.padding-left-13 { padding: 0px !important; }
@@ -1147,9 +1153,10 @@ body.template-plone_root_view #main-content { padding-top: 0; padding-bottom: 0;
 
 .item-title{
   color: #ec6c00;
+  font-size: 18px;
 }
 .item-content{
-  color: #555;
+  color: #BFBFBF;
 }
 .portaltype-plone-site #featured-title{
   border-top: 117px solid;
@@ -1197,6 +1204,11 @@ body.template-plone_root_view #main-content { padding-top: 0; padding-bottom: 0;
 
 .play ol li{
   margin-bottom: 5px;
+  margin-left: 18px;
+}
+
+.play ol li:first-child{
+  margin-top: 1em;
 }
 
 .play ol li:before{
@@ -1205,8 +1217,9 @@ body.template-plone_root_view #main-content { padding-top: 0; padding-bottom: 0;
   color: white;
   background: #ec6c00;
   border-radius: 20%;
-  padding: 5px;
+  padding: 3px;
   margin-right: 5px;
+  margin-left: -22px;
   vertical-align: middle;
 }
 
@@ -1235,6 +1248,34 @@ body.template-plone_root_view #main-content { padding-top: 0; padding-bottom: 0;
   margin:auto;
 }
 
-.sidebar-offcanvas{
-  margin: 20px 0 20px 0;
+.head-align.inner{
+  margin-left: 15px;
 }
+
+.head-align.inner .item .icon{
+  margin-left: -15px;
+}
+
+.widget.widget_list .navTreeItem > a.navTreeCurrentNode:before{
+  background-color: #ed6c01;
+}
+
+.widget.widget_list .navTreeItem > a.navTreeCurrentNode{
+  color: #ed6c01;
+}
+
+.template-login_view .fa-play{
+  padding: 3px 3px 3px 5px;
+}
+
+.subsection-news_01 .section-news_01 > a:before, .subsection-news_02 .section-news_02 > a:before {
+  background-color: #ed6c01 !important;
+} 
+
+.subsection-news_01 .section-news_01 > a, .subsection-news_02 .section-news_02 > a {
+  color: #ed6c01 !important;
+}
+
+a{
+  cursor: pointer !important;
+} 
